sidux-art-pontos (0.0) unstable; urgency=low

  * Initial Release.
  * update wallpaper for inkscape 0.46-2 
  * add first draft makefile for wallpapers
  * add first draft toplevel makefile
  * makefile should reference a dir that exists (wallpaper no s)
  * use make RM builtin instead of rm -f
  * learnt about $@ operator, use it to clean up inkscape export commands
  * add makefiles for all subdirs 
  * add install files for packages 
  * modify rules to build via Makefiles
  * adjust rest of the package so it builds succesfully
  * soften contrast on wallpaper sun 
  * delete unused wide svg - widescreen bitmaps built from normal svg
  * prepare kdm theme 
  * setup gdm base from kdm theme

 -- Bernard Gray <bernard.gray@gmail.com>  Sun, 09 Nov 2008 19:48:12 +1100