@@ -1,8 +1,8 @@
 [GdmGreeterTheme]
 Author=sidux art team
 Copyright=GPL
-Description="sidux 2008-03 ourea" 
+Description="sidux 2008-04 pontos" 
 Encoding=UTF-8
-Greeter=ourea.xml
-Name=sidux-ourea
+Greeter=pontos.xml
+Name=sidux-pontos
 Screenshot=screenshot.jpg
