@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE greeter SYSTEM "greeter.dtd">
-<!--sidux Gaia GDM Theme -->
+<!--sidux pontos 2008-04 GDM Theme -->
 <greeter>
 	<!-- background -->
 	<item type="pixmap">
@@ -10,36 +10,91 @@
 	
 	<item type="pixmap">
 		<normal file="sidux-logo.png"/>
-		<pos x="-20" y="-40" anchor="se"/>
+		<pos anchor="n" x="74%" y="60%"/>
 	</item>
 
 	<item type="rect">
-		<normal color="#eeeeee" alpha="0.2" />
-		<pos x="0" y="0" width="100%" height="40"/>
+		<normal color="#000000" alpha="0.6" />
+		<pos anchor="nw" x="0" y="0" width="45%" height="100%"/>
 		<fixed>
-			<!-- container for username password etc. -->
+			<!-- container for labels etc. -->
 			<item type="rect">
-				<pos x="0" y="15%" width="box" height="box" anchor="nw"/>
-				<!-- username label -->
-				<box orientation="horizontal" spacing="5" xpadding="5">
-					<item type="label" id="pam-prompt">
-						<pos x="0" y="50%" anchor="w"/>
-						<normal font="Sans Bold 12" color="#ffffff"/>
-						<stock type="username-label"/>
+				<pos x="50%" y="15%" width="box" height="box" anchor="c"/>
+				<box orientation="vertical">
+					<!-- welcome -->
+					<item type="label" id="welcome-label">
+						<pos x="50%" anchor="c" />
+						<normal font="Sans Bold 18" color="#ffffff"/>
+						<stock type="welcome-label"/>
 					</item>
-					<item type="entry" id="user-pw-entry">
-						<pos x="0" y="50%" width="170" height="25" anchor="w"/>
-						<normal font="Sans Bold 12" color="#000000"/>
+					<!-- clock important -->
+					<item type="label" id="clock">
+						<normal color="#ffffff" font="Sans Bold 12"/>
+						<pos x="50%" anchor="c" />
+						<text>%c</text>
+					</item>
+					<!-- clock -->
+				</box>
+			</item>
+
+			<!-- pam-error (login failure etc.) -->
+			<item type="rect" id="pam-error">
+				<pos x="50%" y="70%" width="100%" height="box" anchor="n"/>
+				<box orientation="vertical" min-width="90" xpadding="10" ypadding="5" spacing="0">
+					<item type="label" id="pam-error">
+						<normal color="#FFFFFF" font="Sans Bold 12"/>
+						<pos x="50%" y="50%" anchor="n"/>
+						<text></text>
+					</item>
+				</box>
+			</item>
+			<!-- caps-lock-warning -->
+			<item type="rect" id="caps-lock-warning">
+				<normal color="#ff0000" alpha="0.5"/>
+				<pos x="50%" y="30%" width="box" height="box" anchor="n"/>
+				<box orientation="vertical" min-width="90" xpadding="10" ypadding="5" spacing="0">
+					<item type="label">
+						<normal color="#EEEEEE" font="Sans Bold 15"/>
+						<pos x="50%" anchor="n"/>
+						<stock type="caps-lock-warning"/>
+					</item>
+				</box>
+			</item>
+
+			<item type="rect" id="userlist-rect">
+				<normal color="#FFFFFF" alpha="0.8" font="Sans 12" />
+				<pos anchor="ne" x="48%" y="40%" width="box" height="box"/>
+				<box orientation="vertical" min-width="200" max-width="200" min-height="170" xpadding="4" ypadding="4" spacing="0">
+					<item type="list" id="userlist">
+						<normal color="#FFFF1F" alpha="0.5" />
+						<pos x="0" y="0" width="200" height="170" anchor="nw"/>
+						<color iconcolor="#FFFFFF" labelcolor="#FFFFFF"/>
 					</item>
 				</box>
 			</item>
 			<item type="rect">
 			        <normal  />
-			        <pos anchor="ne" x="-1" y="15%" width="box" height="box"/>
-				<box orientation="horizontal" spacing="5" xpadding="10">
+			        <pos anchor="nw" x="50%" y="40%" width="box" height="box"/>
+				<box orientation="vertical" spacing="5" xpadding="10">
+					<!-- container for username password etc. -->
+					<item type="rect">
+						<pos x="0" y="0" width="box" height="box" anchor="nw"/>
+						<!-- username label -->
+						<box orientation="vertical" spacing="5" xpadding="5">
+							<item type="label" id="pam-prompt">
+								<pos x="0" y="50%" anchor="w"/>
+								<normal font="Sans Bold 12" color="#ffffff"/>
+								<stock type="username-label"/>
+							</item>
+							<item type="entry" id="user-pw-entry">
+								<pos x="0" y="50%" width="170" height="25" anchor="w"/>
+								<normal font="Sans Bold 12" color="#000000"/>
+							</item>
+						</box>
+					</item>
 					<item type="rect" id="language_button" button="true">
 						<normal />
-						<pos x="0" y="0" width="box" height="box"/>
+						<pos x="0" y="5" width="box" height="box"/>
 						<box orientation="horizontal" spacing="7" xpadding="5">
 							<item type="pixmap">
 								<normal file="arrow.png" tint="#dddddd"/>
@@ -123,61 +178,7 @@
 					</item>
 				</box>
 			</item>
-	<item type="rect" id="userlist-rect">
-		<normal color="#FFFFFF" alpha="1.0" font="Sans 12" />
-		<pos anchor="nw" x="2%" y="110%" width="box" height="box"/>
-		<box orientation="vertical" min-width="200" max-width="200" min-height="170" xpadding="4" ypadding="4" spacing="0">
-			<item type="list" id="userlist">
-				<normal color="#FFFF1F" alpha="0.5" />
-				<pos x="0" y="0" width="200" height="170" anchor="nw"/>
-				<color iconcolor="#FFFFFF" labelcolor="#FFFFFF"/>
-			</item>
-		</box>
-	</item>
-			<!-- caps-lock-warning -->
-			<item type="rect" id="caps-lock-warning">
-				<normal color="#ff0000" alpha="0.5"/>
-				<pos x="50%" y="110%" width="box" height="box" anchor="n"/>
-				<box orientation="vertical" min-width="90" xpadding="10" ypadding="5" spacing="0">
-					<item type="label">
-						<normal color="#EEEEEE" font="Sans Bold 15"/>
-						<pos x="50%" anchor="n"/>
-						<stock type="caps-lock-warning"/>
-					</item>
-				</box>
-			</item>
-			<!-- pam-error (login failure etc.) -->
-			<item type="rect" id="pam-error">
-				<pos x="50%" y="160%" width="25%" height="box" anchor="n"/>
-				<box orientation="vertical" min-width="90" xpadding="10" ypadding="5" spacing="0">
-					<item type="label" id="pam-error">
-						<normal color="#FFFFFF" font="Sans Bold 12"/>
-						<pos x="50%" y="50%" anchor="n"/>
-						<text></text>
-					</item>
-				</box>
-			</item>
 		</fixed>
-	</item>
-
-	<!-- container for labels etc. -->
-	<item type="rect">
-		<pos x="50%" y="50%" width="box" height="box" anchor="c"/>
-		<box orientation="vertical">
-			<!-- welcome -->
-			<item type="label" id="welcome-label">
-				<pos x="50%" anchor="c" />
-				<normal font="Sans Bold 18" color="#ffffff"/>
-				<stock type="welcome-label"/>
-			</item>
-			<!-- clock important -->
-			<item type="label" id="clock">
-				<normal color="#ffffff" font="Sans Bold 12"/>
-				<pos x="50%" anchor="c" />
-				<text>%c</text>
-			</item>
-			<!-- clock -->
-		</box>
 	</item>
 
 
