@@ -15,5 +15,7 @@ sidux-art-pontos (0.0) unstable; urgency=low
   * delete unused wide svg - widescreen bitmaps built from normal svg
   * prepare kdm theme 
   * setup gdm base from kdm theme
+  * adjust kdm screen rect colour, make it darker=better
+  * prepare gdm theme
 
- -- Bernard Gray <bernard.gray@gmail.com>  Sun, 09 Nov 2008 19:48:12 +1100
+ -- Bernard Gray <bernard.gray@gmail.com>  Mon, 10 Nov 2008 22:05:10 +1100
